Tweak line heights and add components in base.css, tweak comment form spacing in idea.css and correct missing form label for tags in detail.html.

--- a/src/idea/static/idea/css/idea.css
+++ b/src/idea/static/idea/css/idea.css
@@ -205,7 +205,7 @@
 }
 .comment-form {
     background-color: #f2f2f2;
-    padding: 0.625em 0.625em 2.5em;
+    padding: 0.625em 0.625em 2.8em;
     margin: 1.875em 0 0;
 }
 .comment-form textarea {
